# umap_cdw

./: .gitignore  clean  make_plots.py  pyproject.toml  run  submit  submit.e3237062  submit.e3237163  submit.o3237062  submit.o3237163  test.py  test2_results.pkl
analyze_similar_features/: analyze_similar_features.py  make_plots.py  run  run-quick-test  submit
make_fig2_src/: .gitignore  make_plots.py  no_diagonal.py  submit.e3237934  submit.o3237934  submit.o3238818
make_fig2_src/plots/half_window_length_12/window_stepsize_ratio_6/: params-fixed.json  params.json
make_fig2_src/workflow/: Snakefile
make_fig2_src/workflow/scripts/: make_plots.py  no_diagonal.py
no_diagonal/: run  run-quick-test  submit  submit.e3238818
normalize_twotime_contrast/: make_plots.py  normalize_twotime_contrast.py  run  run-quick-test  submit  submit.e3238344  submit.e3238377  submit.o3238344  submit.o3238377
replicate_umap/: make_plots.py  run  submit  test.py
try_overlapping_windows/: make_plots.py  rois.json  run  run-quick-test  submit  submit.e3237863  submit.e3237896  submit.o3237863  submit.o3237896  try_overlapping_windows.py
try_pca/: make_plots.py  run  run-quick-test  submit  submit.e3237934  try_overlapping_windows.py  try_pca.py
umap_cdw/: __init__.py  data.py
